samples/_failures_safe/1761668843_e79809_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8153a2d3.c: In function ‘pointcloud_centroid_distance’:
./samples/SAFE/__tmp_8153a2d3.c:145:5: error: expected expression at end of input
  145 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_8153a2d3.c:145:5: error: expected declaration or statement at end of input
